title tags issues solved

--- a/public/about-us/index.html
+++ b/public/about-us/index.html
@@ -982,7 +982,7 @@
                         </a></div>
                 </div>
             </div>
-        </div><a href="#Top" data-w-id="b14332a4-73fa-3289-cc4d-f2edc8c4e3d9"
+        </div><a title="top" href="#Top" data-w-id="b14332a4-73fa-3289-cc4d-f2edc8c4e3d9"
             class="go-up-button w-inline-block w--current"></a>
         <div class="footer wf-section">
             <div class="gradients-bg">
@@ -1085,21 +1085,21 @@
                             </div>
                         </div>
                         <div class="footer-social-icons">
-                            <div><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
+                            <div><a title="fb" rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
                                     href="https://twitter.com/digipantstweets" target="_blank"
                                     class="social-icon-rounded facebook w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up facebook"></div>
                                         <div class="social-icon-down facebook"></div>
                                     </div>
-                                </a><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
+                                </a><a title="X" rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                     class="social-icon-rounded twittter w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up twitter"></div>
                                         <div class="social-icon-down twitter"></div>
                                     </div>
-                                </a><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
+                                </a><a title="instagram" rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                     class="social-icon-rounded instagram w-inline-block">
                                     <div class="social-icons-container">
