--- a/src/faq.html
+++ b/src/faq.html
@@ -264,8 +264,8 @@
                                                 </div>
                                             </a>
                                             <div class="faq-item-content">
-                                                <p>We're lacated at GE-1, Vivek Complex, Aliganj, Lucknow-226024 (U.P.),
-                                                    India</p>
+                                                <p>We're lacated at First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                        <br>Lucknow, Uttar Pradesh 226001</p>
                                             </div>
                                             <div class="divider-line"></div>
                                         </div>
