Remove unused CSS styles and clean up FAQ accordion markup for improved readability

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,6 @@
 <html lang="en-US" data-wf-page="63936f5636563198e23c7fab" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
 
 <head>
-    <style>
-        .wf-force-outline-none[tabindex="-1"]:focus {
-            outline: none;
-        }
-    </style>
     <meta charset="utf-8">
     <title>DigiPants - Innovative Digital Marketing Solutions in Lucknow</title>
     <meta
@@ -1393,8 +1388,8 @@
                                     </div>
                                     <div class="divider-line"></div>
                                 </div>
-                                <div data-w-id="4a5bd1a6-6c5d-a7aa-fd2e-1451d9dbea3c" class="faq-accordion-wrapper"><a
-                                        href="#" data-w-id="4a5bd1a6-6c5d-a7aa-fd2e-1451d9dbea3d"
+                                <div data-w-id="4a5bd1a6-6c5d-a7aa-fd2e-1451d9dbea2f" class="faq-accordion-wrapper"><a
+                                        href="#" data-w-id="4a5bd1a6-6c5d-a7aa-fd2e-1451d9dbea30"
                                         class="faq-item-trigger w-inline-block">
                                         <div class="full-width-item">
                                             <div class="flex-faq">
@@ -1402,12 +1397,11 @@
                                             </div>
                                         </div>
                                         <div class="faq-open-close">
-                                            <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-270deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                                class="vertical"></div>
+                                            <div class="vertical"></div>
                                             <div class="horizontal"></div>
                                         </div>
                                     </a>
-                                    <div style="width: 100%;" class="faq-item-content">
+                                    <div class="faq-item-content">
                                         <p class="answer">We work with businesses to help them build their brands and
                                             increase their digital footprint through a variety of digital
                                             mediums.</p>
