Update blog post links and images for improved accuracy and relevance

--- a/public/index.html
+++ b/public/index.html
@@ -1976,21 +1976,21 @@
                     <div role="list" class="blog-flex w-dyn-items">
                         <div role="listitem" class="item-preview w-dyn-item"><a
                                 data-w-id="7e4775fe-99e7-ceb3-733f-560ac7ba1c12"
-                                href="post/how-to-create-better-website"
+                                href="/post/how-to-create-better-and-faster-web-sites"
                                 class="link-preview-rounded w-inline-block"><img
-                                    src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                    src="https://digipants.com/assets/632622573bb4e8a1d6504d34/6327475d8894df3609db09d1_linkedin-sales-solutions-P23-VI_mhpM-unsplash.jpg"
                                     loading="lazy" width="530"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1279px) 46vw, 530px"
-                                    srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                    srcset="https://digipants.com/assets/632622573bb4e8a1d6504d34/6327475d8894df3609db09d1_linkedin-sales-solutions-P23-VI_mhpM-unsplash.jpg 500w, https://digipants.com/assets/632622573bb4e8a1d6504d34/6327475d8894df3609db09d1_linkedin-sales-solutions-P23-VI_mhpM-unsplash.jpg"
                                     alt="DigiPants hero banner showing digital marketing graphic">
-                                <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632747de165b79687d1ae8fe_linkedin-sales-solutions-Eo5BYlWb0pM-unsplash.jpg&quot;)"
+                                <div style="background-image:url(&quot;https://digipants.com/assets/632622573bb4e8a1d6504d34/6327475d8894df3609db09d1_linkedin-sales-solutions-P23-VI_mhpM-unsplash.jpg&quot;)"
                                     class="change-hover-image"></div>
                             </a>
                             <div class="blog-preview">
-                                <div class="blog-preview-left"><a href="/category/update"
+                                <div class="blog-preview-left"><a
                                         class="category-link">Update</a></div>
-                                <div class="blog-preview-right"><a href="/post/we-launch-digipants-template-this-week"
-                                        class="preview-link">Digital Marketing in the Real World!</a>
+                                <div class="blog-preview-right"><a href="/post/how-to-create-better-and-faster-web-sites/"
+                                        class="preview-link">How to Create Better and Faster Websites</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p class="answer">It's time to put your money where your mouse is.
                                         </p>
@@ -2002,19 +2002,19 @@
                                 data-w-id="7e4775fe-99e7-ceb3-733f-560ac7ba1c12"
                                 href="/post/your-first-online-store-with-digipants"
                                 class="link-preview-rounded w-inline-block"><img
-                                    src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                    src="https://digipants.com/assets/632622573bb4e8a1d6504d34/6327477f4d1e998c00e2ee43_jonathan-borba-vYFRW77WEqg-unsplash.jpg"
                                     loading="lazy" width="530"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1279px) 46vw, 530px"
-                                    srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                    srcset="https://digipants.com/assets/632622573bb4e8a1d6504d34/6327477f4d1e998c00e2ee43_jonathan-borba-vYFRW77WEqg-unsplash.jpg"
                                     alt="DigiPants hero banner showing digital marketing graphic">
-                                <div style="background-image: url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/6327477f4d1e998c00e2ee43_jonathan-borba-vYFRW77WEqg-unsplash.jpg&quot;); transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                                <div style="background-image: url(&quot;https://digipants.com/assets/632622573bb4e8a1d6504d34/6327477f4d1e998c00e2ee43_jonathan-borba-vYFRW77WEqg-unsplash.jpg&quot;); transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                     class="change-hover-image"></div>
                             </a>
                             <div class="blog-preview">
-                                <div class="blog-preview-left"><a href="/category/studio"
+                                <div class="blog-preview-left"><a
                                         class="category-link">Content</a></div>
                                 <div class="blog-preview-right"><a href="/post/your-first-online-store-with-digipants"
-                                        class="preview-link">A Hubspot Research Report 2022</a>
+                                        class="preview-link">Your First Online Store with DigiPants</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p class="answer">The State of Media & Content Planning
                                         </p>
