--- a/src/index.html
+++ b/src/index.html
@@ -1626,7 +1626,7 @@
                             class="show-more-1">
                             <div data-w-id="4d7c3d83-86fb-3b82-5b40-246390e24329" class="testimonial">
                                 <div class="testimonial-icon"><img
-                                        src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/6333433f4272e41648243fd4_Savings.png"
+                                        src="/assets/63238e717124a8c9a4c94e41/2.png"
                                         loading="lazy" width="90" data-w-id="4d7c3d83-86fb-3b82-5b40-246390e2432b"
                                         alt="DigiPants hero banner showing digital marketing graphic" class="icon-people">
                                 </div>
@@ -1645,7 +1645,7 @@
                             </div>
                             <div data-w-id="4d7c3d83-86fb-3b82-5b40-246390e24335" class="testimonial aqua">
                                 <div class="testimonial-icon"><img
-                                        src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/6333433feb2f7b18c125c1e2_Puzzle.png"
+                                        src="/assets/63238e717124a8c9a4c94e41/3.png"
                                         loading="lazy" width="91" data-w-id="4d7c3d83-86fb-3b82-5b40-246390e24337"
                                         alt="DigiPants hero banner showing digital marketing graphic" class="icon-people">
                                 </div>
@@ -1706,7 +1706,7 @@
                             class="show-more-1">
                             <div data-w-id="3a596cb6-23e0-3f86-73c5-8be1f32ad57e" class="testimonial purple">
                                 <div class="testimonial-icon"><img
-                                        src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/6333433f9b363c26299ba016_Currency.png"
+                                        src="/assets/63238e717124a8c9a4c94e41/1.png"
                                         loading="lazy" width="93.5" data-w-id="3a596cb6-23e0-3f86-73c5-8be1f32ad580"
                                         alt="DigiPants hero banner showing digital marketing graphic" class="icon-people">
                                 </div>
