--- a/src/faq.html
+++ b/src/faq.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 
-<html lang="en" data-wf-page="63936f56365631e8623c7fb9" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en" data-wf-page="63936f56365631e8623c7fb9" data-wf-site="63238e717124a8c9a4c94e41"
+    class=" w-mod-js w-mod-ix">
 
 <head>
     <style>
@@ -170,21 +171,24 @@
                                         <div data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eadd6"
                                             class="top-margin _20-pixels">
                                             <div class="hero-mini-title">Follow us</div>
-                                            <div class="top-margin"><a rel="noopener" title="FB" data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eadda"
+                                            <div class="top-margin"><a rel="noopener" title="FB"
+                                                    data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eadda"
                                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
-                                                </a><a rel="noopener" title="X" data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eadde"
+                                                </a><a rel="noopener" title="X"
+                                                    data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eadde"
                                                     href="https://twitter.com/digipantstweets" target="_blank"
                                                     class="social-icon-rounded twittter w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up twitter"></div>
                                                         <div class="social-icon-down twitter"></div>
                                                     </div>
-                                                </a><a rel="noopener" title="instagram" data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eade2"
+                                                </a><a rel="noopener" title="instagram"
+                                                    data-w-id="598239c2-1dcb-4d85-04ec-741e6e0eade2"
                                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
@@ -264,8 +268,10 @@
                                                 </div>
                                             </a>
                                             <div class="faq-item-content">
-                                                <p>We're lacated at First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
-                                        <br>Lucknow, Uttar Pradesh 226001</p>
+                                                <p>We're lacated at First Floor, Priyadarshini Apartment, 05, Wazir
+                                                    Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                                    <br>Lucknow, Uttar Pradesh 226001
+                                                </p>
                                             </div>
                                             <div class="divider-line"></div>
                                         </div>
@@ -498,7 +504,7 @@
                                         <div>Services</div>
                                         <div class="footer-underline"></div>
                                     </a></div>
-                                
+
                                 <div class="top-margin"><a href="/pricing"
                                         data-w-id="26704e69-4fb1-db44-a426-c6e0f40f7e00"
                                         class="footer-menu-link w-inline-block">
@@ -526,7 +532,7 @@
                                     <div>Contact us</div>
                                     <div class="footer-underline"></div>
                                 </a></div>
-                            
+
                         </div>
                     </div>
                     <div class="footer-expand _3">
@@ -534,7 +540,8 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir
+                                        Hasan Road, Block I, Gokhale Vihar, Hazratganj
                                         <br>Lucknow, Uttar Pradesh 226001
                                     </div>
                                     <div><a rel="noopener" href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
@@ -543,8 +550,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:0522-3148706"
-                                        class="footer-contact-link">0522-3148706</a>
+                                <div class="top-margin"><a href="tel:+91-7317275160"
+                                        class="footer-contact-link">+91-7317275160</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
