--- a/src/about-us.html
+++ b/src/about-us.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 
-<html lang="en-US" data-wf-page="63936f5636563185f13c7faf" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en-US" data-wf-page="63936f5636563185f13c7faf" data-wf-site="63238e717124a8c9a4c94e41"
+    class=" w-mod-js w-mod-ix">
 
 <head>
     <meta charset="utf-8">
@@ -27,7 +28,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -279,19 +280,19 @@
                     <div data-w-id="bacf9f49-6c32-9646-8e49-44742f2d83c5" class="block mobile">
                         <div class="mobile-box"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632774eff8acef11ec754e94_Cell.webp"
-                                loading="lazy" width="300" data-w-id="b97964ad-de3e-dc92-0dcb-51984033af68" alt="Digipants"
-                                class="mobile-crop"><img
+                                loading="lazy" width="300" data-w-id="b97964ad-de3e-dc92-0dcb-51984033af68"
+                                alt="Digipants" class="mobile-crop"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63277508e3580b2ac911f798_Notice.webp"
-                                loading="lazy" width="361" data-w-id="79e00996-aeec-48b8-9798-4ea27b0eb8a2" alt="Digipants"
-                                class="info-bar"></div>
+                                loading="lazy" width="361" data-w-id="79e00996-aeec-48b8-9798-4ea27b0eb8a2"
+                                alt="Digipants" class="info-bar"></div>
                     </div>
                 </div>
                 <div data-w-id="9b0949b4-89c0-adb1-2cee-bcfa066a2030" class="row-item last">
                     <div class="block _2">
                         <div data-w-id="2664b279-7a1b-bf4e-9775-3745ab45fc03" class="tablet-3d"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63277d6789cc0625603169c0_About-Tablet.png"
-                                loading="lazy" width="193" data-w-id="2664b279-7a1b-bf4e-9775-3745ab45fc04" alt="Digipants"
-                                class="hero-mobile">
+                                loading="lazy" width="193" data-w-id="2664b279-7a1b-bf4e-9775-3745ab45fc04"
+                                alt="Digipants" class="hero-mobile">
                             <div data-w-id="2664b279-7a1b-bf4e-9775-3745ab45fc05" class="top-box-mobile">
                                 <div class="small-side-4"></div>
                                 <div class="small-side-2"></div>
@@ -368,7 +369,8 @@
                             <div class="tabs-flex">
                                 <div class="center-flex"><img height="400"
                                         src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/6327a5637c17a7f79817b261_Party.webp"
-                                        loading="lazy" data-w-id="aadb2904-3ac8-74f8-5ff8-ca3855194a29" alt="Digipants"></div>
+                                        loading="lazy" data-w-id="aadb2904-3ac8-74f8-5ff8-ca3855194a29" alt="Digipants">
+                                </div>
                                 <div class="text-column-flex center">
                                     <div class="max-468-pixels">
                                         <h3 class="h3 white">Cost Effective</h3>
@@ -593,24 +595,32 @@
                                                                 <div class="bottom-row">
                                                                     <div class="sign-up-icon"></div>
                                                                     <div>
-                                                                        <p class="sign-small-text dark">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
-                                        <br>Lucknow, Uttar Pradesh 226001
+                                                                        <p class="sign-small-text dark">First Floor,
+                                                                            Priyadarshini Apartment, 05, Wazir Hasan
+                                                                            Road, Block I, Gokhale Vihar, Hazratganj
+                                                                            <br>Lucknow, Uttar Pradesh 226001
                                                                         </p>
                                                                     </div>
                                                                     <div class="divider-line darker"></div>
                                                                 </div>
                                                                 <div class="bottom-row">
-                                                        <div class="sign-up-icon phone"></div>
-                                                        <div class="sing-top-margin">
-                                                            <a href="tel:9651828041"><p class="sign-small-text dark">965-1828-041</p></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="bottom-row">
-                                                        <div class="sign-up-icon phone"></div>
-                                                        <div class="sing-top-margin">
-                                                            <a href="tel:7317275160"><p class="sign-small-text dark">731-7275-160</p></a>
-                                                        </div>
-                                                    </div>
+                                                                    <div class="sign-up-icon phone"></div>
+                                                                    <div class="sing-top-margin">
+                                                                        <a href="tel:9651828041">
+                                                                            <p class="sign-small-text dark">965-1828-041
+                                                                            </p>
+                                                                        </a>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="bottom-row">
+                                                                    <div class="sign-up-icon phone"></div>
+                                                                    <div class="sing-top-margin">
+                                                                        <a href="tel:7317275160">
+                                                                            <p class="sign-small-text dark">731-7275-160
+                                                                            </p>
+                                                                        </a>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                             <div class="qr-box"><img
                                                                     src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632743d34d1e9906e5e2c326_QR.jpg"
@@ -670,7 +680,7 @@
                             <h3 class="h3-title">We take care of your creative needs so that you can focus on running
                                 your business</h3>
                             <div>
-                                <div data-w-id="db2dfbff-5a7d-871d-0f3d-d27a00c73d24" class="checkbox-item first">  
+                                <div data-w-id="db2dfbff-5a7d-871d-0f3d-d27a00c73d24" class="checkbox-item first">
                                     <div class="checkbox-expand">
                                         <h3 class="h3-title no-margin">Pixel Perfect</h3>
                                         <div>
@@ -875,24 +885,30 @@
                                         <div data-w-id="c09b6ee8-7f72-3283-8153-978da96b9faf" class="bottom-row">
                                             <div class="sign-up-icon top"></div>
                                             <div>
-                                                <p class="detail">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
-                                        <br>Lucknow, Uttar Pradesh 226001</p>
+                                                <p class="detail">First Floor, Priyadarshini Apartment, 05, Wazir Hasan
+                                                    Road, Block I, Gokhale Vihar, Hazratganj
+                                                    <br>Lucknow, Uttar Pradesh 226001
+                                                </p>
                                             </div>
                                             <div class="divider-line"></div>
                                         </div>
                                         <div class="bottom-row">
-                                                        <div class="sign-up-icon phone"></div>
-                                                        <div class="sing-top-margin">
-                                                            <a href="tel:9651828041"><p class="sign-small-text">965-1828-041</p></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="bottom-row">
-                                                        <div class="sign-up-icon phone"></div>
-                                                        <div class="sing-top-margin">
-                                                            <a href="tel:7317275160"><p class="sign-small-text">731-7275-160</p></a>
-                                                        </div>
-                                                        <div class="divider-line"></div>
-                                                    </div>
+                                            <div class="sign-up-icon phone"></div>
+                                            <div class="sing-top-margin">
+                                                <a href="tel:9651828041">
+                                                    <p class="sign-small-text">965-1828-041</p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-row">
+                                            <div class="sign-up-icon phone"></div>
+                                            <div class="sing-top-margin">
+                                                <a href="tel:7317275160">
+                                                    <p class="sign-small-text">731-7275-160</p>
+                                                </a>
+                                            </div>
+                                            <div class="divider-line"></div>
+                                        </div>
                                         <div class="bottom-row last">
                                             <div class="sign-up-icon store"></div>
                                             <div><a href="/contact-us" class="mini-title-link margin">Visit our
@@ -918,8 +934,9 @@
             <div class="content-wrapper w-container">
                 <div>
                     <div class="heading-full">
-                        <h2 class="h2 no-margin">Instagram</h2><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5"
-                            href="#" class="insta-handle">@DigiPants</a>
+                        <h2 class="h2 no-margin">Instagram</h2><a rel="noopener"
+                            data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5" href="#"
+                            class="insta-handle">@DigiPants</a>
                     </div>
                     <div class="flex-instagram"><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef8"
                             href="https://www.instagram.com/digipantsinsta" target="_blank"
@@ -951,8 +968,8 @@
                                     width="40" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef0f" alt="Digipants"
                                     class="hover-icon">
                             </div>
-                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef04" href="https://www.instagram.com/"
-                            target="_blank" class="insta-pic w-inline-block"><img
+                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef04"
+                            href="https://www.instagram.com/" target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 sizes="(max-width: 479px) 45vw, (max-width: 767px) 23vw, (max-width: 1439px) 24vw, 312.5px"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp 616w"
@@ -965,8 +982,8 @@
                                     width="40" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef09" alt="Digipants"
                                     class="hover-icon">
                             </div>
-                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef0a" href="https://www.instagram.com/"
-                            target="_blank" class="insta-pic w-inline-block"><img
+                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef0a"
+                            href="https://www.instagram.com/" target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 sizes="(max-width: 479px) 45vw, (max-width: 767px) 23vw, (max-width: 1439px) 24vw, 312.5px"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp 616w"
@@ -1033,7 +1050,7 @@
                                         <div>Services</div>
                                         <div class="footer-underline"></div>
                                     </a></div>
-                                
+
                                 <div class="top-margin"><a href="/pricing"
                                         data-w-id="26704e69-4fb1-db44-a426-c6e0f40f7e00"
                                         class="footer-menu-link w-inline-block">
@@ -1061,7 +1078,7 @@
                                     <div>Contact us</div>
                                     <div class="footer-underline"></div>
                                 </a></div>
-                            
+
                         </div>
                     </div>
                     <div class="footer-expand _3">
@@ -1069,7 +1086,8 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir
+                                        Hasan Road, Block I, Gokhale Vihar, Hazratganj
                                         <br>Lucknow, Uttar Pradesh 226001
                                     </div>
                                     <div><a rel="noopener" href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
@@ -1078,8 +1096,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:0522-3148706"
-                                        class="footer-contact-link">0522-3148706</a>
+                                <div class="top-margin"><a href="tel:+91-7317275160"
+                                        class="footer-contact-link">+91-7317275160</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
