--- a/src/login-page.html
+++ b/src/login-page.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 
-<html lang="en" data-wf-page="63936f563656319d113c7fb2" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en" data-wf-page="63936f563656319d113c7fb2" data-wf-site="63238e717124a8c9a4c94e41"
+    class=" w-mod-js w-mod-ix">
 
 <head>
     <style>
@@ -220,7 +221,7 @@
                                         <div>Services</div>
                                         <div class="footer-underline"></div>
                                     </a></div>
-                                
+
                                 <div class="top-margin"><a href="/pricing"
                                         data-w-id="26704e69-4fb1-db44-a426-c6e0f40f7e00"
                                         class="footer-menu-link w-inline-block">
@@ -248,7 +249,7 @@
                                     <div>Contact us</div>
                                     <div class="footer-underline"></div>
                                 </a></div>
-                            
+
                         </div>
                     </div>
                     <div class="footer-expand _3">
@@ -256,7 +257,8 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir
+                                        Hasan Road, Block I, Gokhale Vihar, Hazratganj
                                         <br>Lucknow, Uttar Pradesh 226001
                                     </div>
                                     <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
@@ -265,8 +267,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:0522-3148706"
-                                        class="footer-contact-link">0522-3148706</a>
+                                <div class="top-margin"><a href="tel:+91-7317275160"
+                                        class="footer-contact-link">+91-7317275160</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
