--- a/src/services.html
+++ b/src/services.html
@@ -199,6 +199,26 @@
                                     </div>
                                 </div>
                             </div>
+                            <div role="listitem" class="service-item w-dyn-item">
+                                    <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
+                                        href="/service/google-ads-management" class="link-preview w-inline-block"><img
+                                            src="/assets/63238e717124a8c9a4c94e41/Digipants-Google-ads.jpg"
+                                            loading="lazy" width="585.5"
+                                            srcset="/assets/63238e717124a8c9a4c94e41/Digipants-Google-ads.jpg 500w, /assets/63238e717124a8c9a4c94e41/Digipants-Google-ads.jpg 800w, /assets/63238e717124a8c9a4c94e41/Digipants-Google-ads.jpg 980w"
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
+                                        <div style="background-image:url(&quot;/assets/Digipants-Google-ads.jpg&quot;)"
+                                            class="change-hover-image"></div>
+                                    </a></div>
+                                <div class="service-rigth-box">
+                                    <div><a href="/service/google-ads-management" class="preview-link-big">Google Ads Management</a>
+                                        <div class="paragraph-box _5-pixels">
+                                            <p>Boost your business with expert Google Ads management for maximum ROI.</p>
+                                        </div>
+                                        <div class="paragraph-box"><a href="/service/google-ads-management"
+                                                class="cost">15000INR /month</a></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div role="navigation" aria-label="List" class="w-pagination-wrapper"></div>
                     </div>
