Refactor service and pricing pages: Update HTML structure, improve accessibility, and enhance pricing details with new plans and add-ons.

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 
-<html lang="en-US" data-wf-page="63936f5636563119b13c7fc0" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en-US" data-wf-page="63936f5636563119b13c7fc0" data-wf-site="63238e717124a8c9a4c94e41"
+    class=" w-mod-js w-mod-ix">
 
 <head>
     <meta charset="utf-8">
@@ -134,12 +135,13 @@
                     <div class="w-dyn-list">
                         <div role="list" class="w-dyn-items">
                             <div role="listitem" class="service-item w-dyn-item">
-                                    <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
+                                <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
                                         href="/service/web-development" class="link-preview w-inline-block"><img
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px"
+                                            alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -156,12 +158,12 @@
                             </div>
                             <div role="listitem" class="service-item w-dyn-item">
                                 <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/social-media"
-                                        class="link-preview w-inline-block"><img
+                                        href="/service/social-media" class="link-preview w-inline-block"><img
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px"
+                                            alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -178,12 +180,14 @@
                                 </div>
                             </div>
                             <div role="listitem" class="service-item w-dyn-item">
-                                    <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/search-engine-optimization" class="link-preview w-inline-block"><img
+                                <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
+                                        href="/service/search-engine-optimization"
+                                        class="link-preview w-inline-block"><img
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px"
+                                            alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -275,7 +279,7 @@
                                         <div>Services</div>
                                         <div class="footer-underline"></div>
                                     </a></div>
-                                
+
                                 <div class="top-margin"><a href="/pricing"
                                         data-w-id="26704e69-4fb1-db44-a426-c6e0f40f7e00"
                                         class="footer-menu-link w-inline-block">
@@ -303,7 +307,7 @@
                                     <div>Contact us</div>
                                     <div class="footer-underline"></div>
                                 </a></div>
-                            
+
                         </div>
                     </div>
                     <div class="footer-expand _3">
@@ -311,7 +315,8 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir
+                                        Hasan Road, Block I, Gokhale Vihar, Hazratganj
                                         <br>Lucknow, Uttar Pradesh 226001
                                     </div>
                                     <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
@@ -320,8 +325,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:0522-3148706"
-                                        class="footer-contact-link">0522-3148706</a>
+                                <div class="top-margin"><a href="tel:+91-7317275160"
+                                        class="footer-contact-link">+91-7317275160</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
