--- a/public/index.html
+++ b/public/index.html
@@ -661,9 +661,9 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Aditya Bajpai</h5>
+                            <h5 class="team-name">Aman Kharwar</h5>
                             <div>
-                                <div class="team-title">SEO</div>
+                                <div class="team-title">UI/UX</div>
                             </div>
                         </div>
                     </div>
